--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="icon" type="image/svg+xml" href="/public/favicon.ico" />
     <link rel="icon" href="/public/favicon.ico" sizes="any">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>PetalStack</title>
+    <title>Niedryuz - Modern Fashion E-Commerce</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
